<resources>
    <string name="app_name" translatable="false">Chapper</string>
    <string name="bluetooth_not_available">Bluetooth is not available</string>
    <string name="bluetooth_not_enabled">Bluetooth is not enabled</string>
    <string name="search_for_devices">Search for devices</string>
    <string name="invite_friends">Invite friends</string>
    <string name="settings">Settings</string>
    <string name="faq" translatable="false">FAQ</string>
    <string name="error">Error</string>
    <string name="faq_url" translatable="false">https://chapper.gitbooks.io/faq/content/</string>
    <string name="sharing_text">Hey! Let\'s switch to Chapper: https://chapper.org/#dl</string>
    <string name="looking_for_devices">Looking for devices…</string>
    <string name="unknown_mac_address">Unknown MAC-address</string>
    <string name="fill_in_all_fields">Please, fill in all the fields.</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="firstname_lastname_visible">The first name and last name are only visible to friends.</string>
    <string name="username_visible">Username is the name of your Bluetooth.\nIt is visible to all nearby.</string>
    <string name="refresh">Refresh</string>
    <string name="refreshing">Refreshing…</string>
    <string name="no_one_near">No one near :(</string>
    <string name="enable_discoverable">Enable discoverable</string>
    <string name="chat_created">Chat created</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="loading">Loading…</string>
    <string name="it_empty">It\'s empty</string>
    <string name="connected">connected</string>
    <string name="nearby">nearby</string>
    <string name="offline">offline</string>
    <string name="refreshing_small">refreshing…</string>
    <string name="last_connection_in">last connection in</string>
    <string name="last_connection">last connection</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="select_action">Select action</string>
    <string name="delete">Delete</string>
    <string name="messages">Messages</string>
    <string name="send_by_enter">Send by Enter</string>
    <string name="information">Information</string>
    <string name="change_name">Change name</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="save">Save</string>
    <string name="visible_devices">Visible devices</string>
    <string name="typing">typing…</string>
    <string name="pick_image">Pick image</string>
    <string name="clear_history">Clear history</string>
    <string name="image_content">Image content</string>
</resources>
